# pycpp-tflite-inferences

./: README.md  keras2tflite.py  keras2tfpb.py
cpp-inference/: CMakeLists.txt  Makefile  README.md  inference.cpp  run.sh  tflite_compile.txt  whole_setup.sh
cpp-inference/Docker/: devel-cpu.Dockerfile  tflite-android.Dockerfile
cpp-inference/tensorflow_utils/tf_prebuild_linux-cpu-x86_64/: set.sh
examples/pruning/: const.py  create_base_model.py  create_prune_model.py  pruning.py  run.sh
examples/tflite/: keras2tflite.py  run.sh  save_keras_model.py
py-inference/: README.md  inference.py  pruning.py  reset.sh
py-inference/Docker/: Dockerfile  Makefile
py-inference/utils/: for_implosion.py  prune_utils.py  tflite_utils.py
tf-model/: README.md
